// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders basic 1`] = `
<View>
  <RCTSafeAreaView
    style={
      [
        {
          "backgroundColor": "#FFF",
        },
        {
          "flexGrow": 1,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 44,
            "paddingLeft": 15,
            "paddingRight": 20,
          },
          {},
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "justifyContent": "center",
            "paddingVertical": 10,
          }
        }
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            [
              {
                "flexGrow": 1,
                "fontSize": 16,
                "letterSpacing": -0.32,
              },
              {
                "color": "#000",
              },
              {},
            ]
          }
        >
          Basic
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders with accessory 1`] = `
<View>
  <RCTSafeAreaView
    style={
      [
        {
          "backgroundColor": "#FFF",
        },
        {
          "flexGrow": 1,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 44,
            "paddingLeft": 15,
            "paddingRight": 20,
          },
          {},
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "justifyContent": "center",
            "paddingVertical": 10,
          }
        }
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            [
              {
                "flexGrow": 1,
                "fontSize": 16,
                "letterSpacing": -0.32,
              },
              {
                "color": "#000",
              },
              {},
            ]
          }
        >
          Basic
        </Text>
      </View>
      <View
        style={
          {
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            [
              {
                "backgroundColor": "transparent",
                "borderColor": "#c7c7cc",
                "borderRightWidth": 1,
                "borderTopWidth": 1,
                "height": 10,
                "marginLeft": 7,
                "transform": [
                  {
                    "rotate": "45deg",
                  },
                ],
                "width": 10,
              },
              {
                "borderColor": "#C7C7CC",
              },
            ]
          }
        />
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders with testID 1`] = `
<View
  testID="testID"
>
  <RCTSafeAreaView
    style={
      [
        {
          "backgroundColor": "#FFF",
        },
        {
          "flexGrow": 1,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "minHeight": 44,
            "paddingLeft": 15,
            "paddingRight": 20,
          },
          {},
        ]
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexBasis": 0,
            "flexDirection": "row",
            "flexGrow": 1,
            "justifyContent": "center",
            "paddingVertical": 10,
          }
        }
      >
        <Text
          allowFontScaling={true}
          numberOfLines={1}
          style={
            [
              {
                "flexGrow": 1,
                "fontSize": 16,
                "letterSpacing": -0.32,
              },
              {
                "color": "#000",
              },
              {},
            ]
          }
        >
          Basic
        </Text>
      </View>
    </View>
  </RCTSafeAreaView>
</View>
`;
